--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>🐼 Adrian's CV</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table cellspacing="30">
     <tr>
-      <td><img src="adrian2.png" alt=""></td>
+      <td><img id="Profilepicture"src="adrian2.png" alt=""></td>
       <td>  <h1>Adrian Cortinas</h1>
         <p><em>User Experience & User Interface Designer at USAA</em></p>
         <p>I am a
@@ -18,7 +20,7 @@
           design problems at varying
           scales, keeping the big
           picture in mind, but paying
-          close attention to ne details.
+          close attention to specific details.
           My work focuses on
           human-centered design
           processes which champion
@@ -39,8 +41,11 @@
           energy. I’m looking forward to
           share my background and
           experiences and contribute to create work that matters.
-          Currently, I work as a I'm learning web and iOS development to compliment my design skillset.
-          In my free time you can find me running the trails of the Texas Hill Country, visiting a local brewery with my wife and goldendoodle, or cheering on the lads of Liverpool FC.</p>
+<br>
+<br>
+          I practice as a UX/UI desinger and strategist, and I'm constantly working to improve
+          my design skillset.  Currently, I'm enrolled in a coding bootcamp learning web and iOS development.
+          In my free time you can find me running the trails of the Texas Hill Country, visiting a local brewery with my wife and goldendoodle puppy, or cheering on the lads of Liverpool FC.</p>
           <br>
           <a href="ContactMe.html">Contact me</a> <br><br>
           <a href="https://www.adriancortinas.work/">Back to Squarespace</a></td>
@@ -70,11 +75,27 @@
       <tbody>
         <tr>
           <td>Nov. 2019-Current</td>
-          <td>UX/UI Designer</td>
+          <td>UX/UI Designer at USAA</td>
         </tr>
         <tr>
           <td>May 2019-March 2020</td>
-          <td>Product Designer</td>
+          <td>Product Designer at Dorothy</td>
+        </tr>
+        <tr>
+          <td>Nov. 2018-Oct. 2019</td>
+          <td>Urban Designer at Talley Associates</td>
+        </tr>
+        <tr>
+          <td>Aug. 2017- Oct. 2018</td>
+          <td>Urban Designer at SWA Group</td>
+        </tr>
+        <tr>
+          <td>Aug. 2016 - May 2017</td>
+          <td>Designer at H+N+S Landscape Architects</td>
+        </tr>
+        <tr>
+          <td>Summer 2015</td>
+          <td>Intern Designer at OLIN</td>
         </tr>
       </tbody>
       <tfoot>
@@ -127,7 +148,7 @@
           </tr>
           <tr>
             <td>Adobe XD</td>
-            <td>★★★</td>
+            <td>★★★★</td>
           </tr>
           <tr>
             <td>Adobe Photoshop</td>
@@ -143,7 +164,7 @@
           </tr>
           <tr>
             <td>HTML, CSS, JS</td>
-            <td>★★★★</td>
+            <td>★★★</td>
           </tr>
         </table></td>
       </tr>
@@ -151,47 +172,6 @@
 
 
 
-
-  <h3>Professional Experience</h3>
-    <ul>
-      <li><strong>UX/UI Designer | USAA | San Antonio, TX | Nov. 2019 - Current | <a href="https://www.usaa.com/?akredirect=true">USAA</a></strong> - I work in the Chief Design Ofce within USAA supporting the MSR (Member Service Representative)
-        Desktop Tools. Within this space, I
-        am part of a design team which is responsible for the user experience and interface design of new digital tools implemented to ensure
-        the success of MSRs when they service USAA members. My responsibilities include the creation of user ows, user research and
-        testing, design strategy, visual design, prototyping, and design specication delivery for development teams.</li>
-      <br />
-      <li><strong>Product Designer | Dorothy | Philadelphia, PA | May 2019 - March 2020 | <a href="https://dorothymap.com/">dorothymap.com</a></strong>
-        Dorothy is an early stage, tech startup company that aims to repackage ood risk information and provide the necessary awareness
-        and coverage for home owners & buyers and commercial real estate developers prior to a major hurricane or storm. In my role, I
-        advocate for customer usability while also helping to direct the company’s direction in regard to product development. I adapted the
-        company’s current research into a design process to quickly asses areas of opportunity. I developed target customers from the resarch
-        and tested early iterations of low-delity wireframe sketches. Other tools used during my time at Dorothy include Sketch, Adobe XD
-        and Adobe Photoshop, Illustrator & InDesign.</li>
-      <br>
-      <li><strong>Urban & Landscape Designer | Talley Associates | Dallas, Texas | Nov. 2018 - Current | <a href="https://talleyassociates.com/">talleyassociates.com</a></strong> I worked on visual design and illustration for landscape and
-        architecture projects in the North Texas region as well as in Arkansas and
-        the Caribbean. I created various illustrations including plans, renderings, graphic illustrations and diagrams using tools such as
-        Illustrator and Photoshop, while creating client presentations in InDesign. I also crafted 3D models in Rhino 3D and Lumion. Overall, I
-        managed the creative visual identity of the company and maintained client relations.</li>
-      <br>
-      <li><strong>Urban & Landscape Designer | SWA Group in Dallas, Texas | Aug. 2017 - Oct. 2018 | <a href="https://www.swagroup.com/">www.swagroup.com</a></strong> My experience includes major projects in Dallas, Santa Fe, Nashville, St. Louis,
-        Cedar Rapids, Mexico & Egypt. During my time at SWA
-        I applied discretion and independent judgement in helping to solve planning & design problems for our clients. I gathered and analyzed
-        project data, and prepared renderings and working drawings using manual and automated design tools such as Adobe Photoshop,
-        Illustrator and InDesign as well as AutoCAD.</li>
-      <br>
-      <li><strong>Designer | H+N+S Landscape Architects | Brooklyn, New York | Aug. 2016 - May 2017 | <a href="http://www.hnsland.nl/en/">www.waterlanddesign.com</a></strong> During my time in New York, I had the opportunity to collaborate in the
-        schematic design phase for a coastal resiliency project through
-        the 2012 Rebuild by Design campaign led by President Obama to battle climate-change and rising sea-levels. As the rst American
-        employee of Dutch company WaterLand, I helped create technical drawings for the design, and subsequently helped to create visual
-        illustrations of how the project would impact the local community of Nassau County, in Long Island, New York.</li>
-      <br>
-      <li><strong>Design Intern | OLIN | Philadelphia, Pennsylvania | Summer 2015 | <a href="https://www.theolinstudio.com/featured-projects">www.theolinstudio.com</a></strong> At OLIN, I was invloved in the conceptual design phase of The Hills at
-        Vallco, which is a 30 acre redevelopment of a mall in Cupertino,
-        California. The project includes an innovative rooftop park design over 13 city blocks, creating new open green space for the city.
-        During my time as an intern, I coordinated with the design team and client group to iterate and test ideas of sense-of-place and identity
-        for the park, it’s programmatic components, and how they would integrate to create a comprehensive and feasible design.</li>
-    </ul>
 
 
 </body>
