--- a/ContactMe.html
+++ b/ContactMe.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
+<center>
   <body>
 <h3>You can reach me here:</h3>
 <p>amc.design19@gmail.com</p>
@@ -18,4 +20,5 @@
   <textarea name="Message" rows="10" cols="30"></textarea> <br>
   <input type="submit" name="">
   </body>
+  </center>
 </html>
